
2003-05-17  Saito <timidity@flashmail.com>

	* timidity/sndfont.c:
	  Bug fix.

2003-05-15  Saito <timidity@flashmail.com>

	* timidity/rcp.c, timidity/playmidi.[ch], timidity/readmidi.[ch],
	  timidity/resample.c, timidity/tables.[ch], timidity/sndfont.c,
	  timidity/mix.c, timidity/timidity.c:
	  Support for parse_sysex_multi() for RCP/R36/G18/G36 MIDI data.
	  Support for channel layer (GS - Rx. Channel / XG - Rcv Channel).
	  Fix in delay, envelope generator, vibrato and tremolo.

2003-05-12  Saito <timidity@flashmail.com>

	* timidity/sndfont.c, timidity/mix.c:
	  Fix tremolo.

2003-05-10  Saito <timidity@flashmail.com>

	* timidity/instrum.c, timidity/smplfile.c, timidity/mod2midi.c:
	  Fix fatal bug about scaleTuning.
	* timidity/sndfont.c, timidity/tables.[ch], timidity/mix.c,
	  timidity/playmidi.[ch], timidity/instrum.[ch], timidity/reverb.c:
	  Fix about tremolo again.
	  Fix in reverb parameters.
	  Fix about envelope for SoundFont.
	  Support for SF2 scaleTuning.
	  
2003-05-08  Saito <timidity@flashmail.com>

	* timidity/sndfont.c:
	  Fix about tremolo again.

2003-05-07  Kentaro Sato <kentaro@ps.catv.ne.jp>

	* timidity/sysdep.h:
	  Fix compile error in case of MAX_CHANNEL >= 33
	  
2003-05-07  Saito <timidity@flashmail.com>

	* timidity/tables.[ch], timidity/mix.c,
	  timidity/playmidi.[ch], timidity/sndfont.c, timidity/resample.c:
	  Fix around tremolo and vibrato.
	  Fix about envelope generator.
	  Bug fix in pitch control.

2003-05-05  Saito <timidity@flashmail.com>

	* timidity/sndfont.c:
	  Fix in modify-release (pseudo-reverb).

2003-05-04  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/instrum.c, timidity/playmidi.c, timidity/playmidi.c,
	  interface/w32g_ut2.[ch], interface/w32g_subwin.c,
	  interface/w32g_subwin3.c, interface/w32g_pref.c, interface/w32g_res.[h,rc]:
	  Fix around Win32 GUI.
	  Support for dynamic cfg changing experimentally.
	  
2003-05-03  Saito <timidity@flashmail.com>

	* timidity/mix.c, timidity/playmidi.[ch],