@@ -1174,6 +1174,26 @@ FLOAT_T sc_eg_decay_table[128] =
     0.006800, 0.006220, 0.005690, 0.005205, 0.004761, 0.004355, 0.003984, 0.003644, 
 };
 
+FLOAT_T sc_eg_release_table[128] = 
+{
+    300.000000, 274.420300, 251.021671, 229.618141, 210.039597, 192.130431, 175.748302, 160.763006, 
+    147.055441, 134.516661, 123.047008, 112.555323, 102.958219, 94.179417, 86.149147, 78.803582, 
+    72.084342, 65.938023, 60.315774, 55.172909, 50.468554, 46.165319, 42.229003, 38.628319, 
+    35.334649, 32.321817, 29.565876, 27.044922, 24.738918, 22.629538, 20.700015, 18.935015, 
+    17.320508, 15.843663, 14.492743, 13.257010, 12.126642, 11.092656, 10.146833, 9.281656, 
+    8.490250, 7.766323, 7.104122, 6.498385, 5.944296, 5.437451, 4.973823, 4.549727, 
+    4.161791, 3.806934, 3.482333, 3.185409, 2.913803, 2.665356, 2.438093, 2.230207, 
+    2.040047, 1.866101, 1.706987, 1.561439, 1.428302, 1.306517, 1.195116, 1.093214, 
+    1.000000, 0.914734, 0.836739, 0.765394, 0.700132, 0.640435, 0.585828, 0.535877, 
+    0.490185, 0.448389, 0.410157, 0.375184, 0.343194, 0.313931, 0.287164, 0.262679, 
+    0.240281, 0.219793, 0.201053, 0.183910, 0.168229, 0.153884, 0.140763, 0.128761, 
+    0.117782, 0.107739, 0.098553, 0.090150, 0.082463, 0.075432, 0.069000, 0.063117, 
+    0.057735, 0.052812, 0.048309, 0.044190, 0.040422, 0.036976, 0.033823, 0.030939, 
+    0.028301, 0.025888, 0.023680, 0.021661, 0.019814, 0.018125, 0.016579, 0.015166, 
+    0.013873, 0.012690, 0.011608, 0.010618, 0.009713, 0.008885, 0.008127, 0.007434, 
+    0.006800, 0.006220, 0.005690, 0.005205, 0.004761, 0.004355, 0.003984, 0.003644, 
+};
+
 FLOAT_T sc_eg_attack_table[128] = 
 {
     493.203275, 453.731153, 417.340610, 383.796149, 352.879932, 324.390480, 298.141466, 273.960593, 
@@ -1210,8 +1230,10 @@ void init_convex_vol_table(void)
 {
 	int i;
 	
-	for (i = 0; i < 1024; i++)
+	for (i = 0; i < 1024; i++) {
 		convex_vol_table[i] = 1.0 - (-20.0 / 96.0 * log(((double)i * (double)i) / (1023.0 * 1023.0)) / log(10.0));
+		if(convex_vol_table[i] < 0) {convex_vol_table[i] = 0;}
+	}
 
 	convex_vol_table[0] = 0;
 	convex_vol_table[1023] = 1.0;
